# cpp_cuda_template_project

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CONTEXT.md  README.md  ROS2_OVERLAY_STAGE_OUTPUTS.md  TODO  add_ros2_support.sh  build_lib.sh  build_ros2.sh  build_script_doc.md  cmake_uninstall.cmake  configure_devcontainer.sh  cpp_cuda_template_project.code-workspace  generate_version.sh  run_in_container.sh  tailor_template_cleanup.sh
.devcontainer/: Dockerfile  devcontainer.json  ros-setup.sh  update_devcontainer_json.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/templates/: config.yml
.github/workflows/: build_linux.yml  build_linux.yml.templ  build_linux.yml.templ0  build_linux.yml.templ1  build_linux.yml.tpl  build_linux_cuda.yml  build_linux_cuda.yml.templ0  build_linux_cuda.yml.templ1  build_linux_cuda.yml.tpl  build_ros2_overlay.yml  build_ros2_overlay.yml.tpl  c-cpp.yml  docs_pages.yml  docs_pages.yml.tpl
CppUnitLite/: CMakeLists.txt
cmake/: FindNumPy.cmake  HandleCUDA.cmake  HandleCatch2.cmake  HandleCustomTargets.cmake  HandleGitVersion.cmake  HandleOpenGL.cmake  HandleOpenMP.cmake  HandleOptiX.cmake  HandleProfiling.cmake  HandlePython.cmake  HandleSanitizers.cmake  HandleSpdlog.cmake  HandleSubmodules.cmake  HandleUninstall.cmake  HandleWrapper.cmake  cmake_cuda_ptx_tools.cmake  cmake_utils.cmake
cmake/toolchains/: HandleToolchain.cmake
cmake/toolchains/defaults/: common-cross.cmake
doc/: CMakeLists.txt  Doxyfile.in  bootstrap_prompts.md  build_script_doc.md  cpp_cuda_build.md  documentation_workflow.md  logging.md  main_page.md  ros2_overlay.md  template_usage.md  testing_and_ci.md  versioning.md  wrappers.md
doc/developments/: ROS2_OVERLAY_STAGE_OUTPUTS.md  default_ros2_metadata_sync_plan.md  derived_project_upgrade_agent_guidelines.md  docs_workflow_rollout.md  matlab_wrap_crash_investigation_plan.md  ros2_overlay_review_remediation_plan.md  ros2_overlay_upgrade_plan.md  template_v2_test_ownership_plan.md  update_containerized_dev_plan.md
doc/reports/: ros2_overlay_implementation_review.md
examples/: CMakeLists.txt  COLCON_IGNORE  example_build.cpp
examples/template_consumer_project/: CMakeLists.txt  example_project.cpp  example_project.h
examples/template_examples/: CMakeLists.txt  example_build.cpp
lib/: COLCON_IGNORE
profiling/: .gitignore  open_nvidia_profile.sh  run_call_profiling.sh  run_gperf_profiling.sh  run_gpu_profiling.sh  run_mem_complexity.sh  run_ops_profiling.sh
python/: COLCON_IGNORE
python/template_project/: __init__.py
ros2/template_project/: CMakeLists.txt  package.xml
ros2/template_project_interfaces/: CMakeLists.txt  package.xml
ros2/template_project_interfaces/msg/: AlgorithmStatus.msg
ros2/template_project_interfaces/srv/: RunAlgorithm.srv
ros2/template_project_ros/: CMakeLists.txt  package.xml
ros2/template_project_ros/include/template_project_ros/: CTemplateLifecycleNode.h  conversions.h
ros2/template_project_ros/src/: CTemplateLifecycleNode.cpp  conversions.cpp  template_project_node_main.cpp
ros2/template_project_ros/test/: test_conversions.cpp  test_node_construction.cpp
ros2/template_project_spinup/: CMakeLists.txt  package.xml
ros2/template_project_spinup/config/: template_project.yaml
ros2/template_project_spinup/launch/: template_project.launch.py  template_project_composition.launch.py
ros2/template_project_spinup/test/: test_spinup_launch.py
ros2/tools/: sync_package_metadata.py
src/: CMakeLists.txt  config.h.in  wrap_interface.i
src/.programs/: CMakeLists.txt
src/cmake/: template_projectConfig.cmake.in
src/template_folder/: CMakeLists.txt
src/template_src/: CMakeLists.txt  placeholder.cpp  placeholder.h
src/template_src_kernels/: CMakeLists.txt
src/utils/: CMakeLists.txt
src/utils/logging/: CLogger.cpp  CLogger.h  CMakeLists.txt  SpdlogUtils.cpp  SpdlogUtils.h
src/wrapped_impl/: CMakeLists.txt  CWrapperPlaceholder.cpp  CWrapperPlaceholder.h  wrapper_placeholder.i
tests/: CMakeLists.txt  COLCON_IGNORE
tests/cmake/: AddMatlabWrapperRegressionTests.cmake  CheckTcmallocDependency.cmake  VerifySourceReleaseArchive.cmake  VerifyTemplateProjectAddTestsProperties.cmake  VerifyTemplateProjectBuildTreePackage.cmake  VerifyTemplateProjectCiWorkflowFlags.cmake  VerifyTemplateProjectCrossCompile.cmake  VerifyTemplateProjectCudaSources.cmake  VerifyTemplateProjectCudaWithoutCatch2.cmake  VerifyTemplateProjectDocsStatic.cmake  VerifyTemplateProjectDocsWorkflow.cmake  VerifyTemplateProjectNestedDocsIsolation.cmake  VerifyTemplateProjectNestedInstallHeaders.cmake  VerifyTemplateProjectNoOptimization.cmake  VerifyTemplateProjectOptimizedFlags.cmake  VerifyTemplateProjectOptixInstallExport.cmake  VerifyTemplateProjectPythonTestOptions.cmake  VerifyTemplateProjectReleaseTagSync.cmake  VerifyTemplateProjectRos2Overlay.cmake  VerifyTemplateProjectTailoringScript.cmake  VerifyTemplateProjectVersionSideEffects.cmake
tests/matlab/: RunTemplateWrapperRegression.m
tests/template_cuda/: CMakeLists.txt  cudaInitGate.cpp  testCudaPlaceholder.cpp
tests/template_fixtures/: CMakeLists.txt
tests/template_test/: CMakeLists.txt  testDevcontainerJson.py  testLogging.cpp  testProjectLogger.cpp  testPythonSmoke.py  testRos2OverlayStatic.py  testWorkflowTemplates.py
